--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                 getiren nedenleri, mevcut zorluklarınızı ve terapi sürecinden beklentilerinizi
                                 konuşuruz. Aynı zamanda benim çalışma yaklaşımımı tanır, aklınızdaki soruları
                                 sorarsınız. Bu, hem sizin hem de benim, birlikte çalışıp çalışamayacağımızı anlamamız
-                                için önemli bir fırsatır.</p>
+                                için önemli bir fırsattır.</p>
                         </div>
                     </div>
 
